--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "jquery": "~1.9.0",
     "underscore": "~1.4.3",
     "backbone": "~1.0.0",
-    "modernizr": "~2.6.2"
+    "modernizr": "~2.6.2",
+    "ractive": "~0.3.9",
+    "ractive-backbone": "~0.1.0"
   },
   "devDependencies": {}
 }
